<resources>
    <string name="app_name">CryptoNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT ?</string>
    <string name="crypto_news">Crypto News</string>
    <string name="user_name">User Name</string>
    <string name="add">add</string>
    <string name="your_coins">Your Coins</string>
    <string name="save">Save</string>
    <string name="circulating_supply">Circulating Supply:</string>
    <string name="market_cap">Market Cap:</string>
    <string name="total_supply">Total Supply:</string>
    <string name="max_supply">Max Supply:</string>
    <string name="max_cap_rank">Max Cap Rank:</string>
    <string name="_24h_low_24h_high">24h Low / 24h High:</string>
    <string name="slash">/</string>
    <string name="sign_out">Sign Out</string>
    <string name="source_page">Source Page:</string>
    <string name="usd">USD</string>
    <string name="gel">GEL</string>
    <string name="your_coins_list">Your Coins:</string>
    <string name="available_coins">Available Coins:</string>
</resources>