<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lavender_blue"
    tools:context=".ui.login.LoginFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
        android:layout_marginBottom="50dp"
        android:background="@color/baby_blue_eyes">
    </View>

    <View
        android:layout_marginBottom="30dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/il_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/circle">
    </View>

    <com.google.android.material.textview.MaterialTextView
        android:textSize="42sp"
        android:letterSpacing="0.1"
        app:fontFamily="@font/gill_sans_mt"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gill_sans_mt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/iv_icon">
    </com.google.android.material.textview.MaterialTextView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_action_name"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/il_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.appcompat.widget.AppCompatImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_email"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:errorEnabled="true"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/gill_sans_mt"
            android:backgroundTint="@color/lavender_grey"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_password"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/il_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:backgroundTint="@color/lavender_grey"
            android:id="@+id/et_password"
            android:fontFamily="@font/gill_sans_mt"
            android:inputType="textPassword"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/il_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/log_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:paddingTop="6dp"
        android:textSize="15sp"
        android:fontFamily="@font/gill_sans_mt"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register" />

    <View
        android:layout_width="match_parent"
        android:background="#6FC9CAD9"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </View>


    <com.google.android.material.textview.MaterialTextView
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/don_t_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gill_sans_mt"
        app:layout_constraintRight_toLeftOf="@+id/btn_register"
        app:layout_constraintLeft_toLeftOf="@id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/btn_register"
        app:layout_constraintBottom_toBottomOf="@+id/btn_register">
    </com.google.android.material.textview.MaterialTextView>

</androidx.constraintlayout.widget.ConstraintLayout>