<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.coin_chooser.CoinChooserFragment">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/lavender_grey"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ProgressBar>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:paddingTop="6dp"
        android:textSize="15sp"
        android:fontFamily="@font/gill_sans_mt"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/save" />
    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:background="#6FC9CAD9"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </View>
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/your_coins_list"
        android:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/border"
        app:layout_constraintBottom_toTopOf="@id/rv_my_coins"
        app:layout_constraintLeft_toLeftOf="@id/rv_my_coins">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/available_coins"
        android:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/rv_my_coins"
        app:layout_constraintBottom_toTopOf="@id/rv_available_coins"
        app:layout_constraintLeft_toLeftOf="@id/rv_available_coins">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_coins"
        android:background="@color/baby_blue_eyes"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@+id/border">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:background="@color/baby_blue_eyes"
        android:id="@+id/rv_available_coins"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_my_coins">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>