<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender_blue"
    tools:context=".ui.coin_item.CoinItemFragment">

    <ProgressBar
        android:visibility="gone"
        android:indeterminateTint="@color/cornflower_blue"
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </ProgressBar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:fontFamily="@font/gill_sans_mt"
        app:layout_constraintStart_toEndOf="@+id/iv_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_icon">

    </androidx.appcompat.widget.AppCompatTextView>
    <!--this is graph-->
    <com.github.mikephil.charting.charts.LineChart
        android:visibility="invisible"
        android:background="@color/cornflower_blue_darker"
        android:id="@+id/lc_graph"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon">

    </com.github.mikephil.charting.charts.LineChart>

    <androidx.appcompat.widget.AppCompatTextView
        app:fontFamily="@font/gill_sans_mt"
        android:id="@+id/market_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/market_cap"
        android:textColor="@color/lavender_grey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lc_graph">

    </androidx.appcompat.widget.AppCompatTextView>
    <View
        android:layout_width="match_parent"
        android:background="@color/cornflower_blue_darker"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/market_cap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </View>
    <androidx.appcompat.widget.AppCompatTextView
        app:fontFamily="@font/gill_sans_mt"
        android:textStyle="bold"
        android:letterSpacing="0.02"
        android:id="@+id/tv_market_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/market_cap">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tv_price"
        app:layout_constraintTop_toTopOf="@+id/tv_price">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:textStyle="bold"
        android:letterSpacing="0.02"
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        app:fontFamily="@font/gill_sans_mt"
        android:id="@+id/circulating_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/circulating_supply"
        android:textColor="@color/lavender_grey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/market_cap">

    </androidx.appcompat.widget.AppCompatTextView>

    <View
        android:layout_width="match_parent"
        android:background="@color/cornflower_blue_darker"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/circulating_supply"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </View>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_circulating_supply"
        app:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/circulating_supply">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total_supply"
        app:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/total_supply"
        android:textColor="@color/lavender_grey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circulating_supply">

    </androidx.appcompat.widget.AppCompatTextView>
    <View
        android:layout_width="match_parent"
        android:background="@color/cornflower_blue_darker"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/total_supply"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </View>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_total_supply"
        android:textStyle="bold"
        android:letterSpacing="0.02"
        android:layout_width="wrap_content"
        app:fontFamily="@font/gill_sans_mt"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/total_supply">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/max_supply"
        app:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/max_supply"
        android:textColor="@color/lavender_grey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_supply">

    </androidx.appcompat.widget.AppCompatTextView>
    <View
        android:layout_width="match_parent"
        android:background="@color/cornflower_blue_darker"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/max_supply"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </View>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_max_supply"
        android:textStyle="bold"
        android:letterSpacing="0.02"
        app:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/max_supply">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/market_cap_rank"
        android:layout_width="wrap_content"
        app:fontFamily="@font/gill_sans_mt"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/max_cap_rank"
        android:textColor="@color/lavender_grey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_max_supply">

    </androidx.appcompat.widget.AppCompatTextView>
    <View
        android:layout_width="match_parent"
        android:background="@color/cornflower_blue_darker"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/market_cap_rank"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </View>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_market_cap_rank"
        app:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/market_cap_rank">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/daily_low_high"
        app:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/_24h_low_24h_high"
        android:textColor="@color/lavender_grey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_market_cap_rank">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_daily_high"
        android:textStyle="bold"
        android:letterSpacing="0.02"
        app:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/daily_low_high">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:fontFamily="@font/gill_sans_mt"
        android:text="@string/slash"
        android:textColor="@color/lavender_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_daily_high"
        app:layout_constraintTop_toTopOf="@+id/daily_low_high">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:textStyle="bold"
        android:letterSpacing="0.02"
        android:id="@+id/tv_daily_low"
        app:fontFamily="@font/gill_sans_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/slash"
        app:layout_constraintTop_toTopOf="@+id/daily_low_high">

    </androidx.appcompat.widget.AppCompatTextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_gel"
        android:paddingTop="6dp"
        android:textSize="15sp"
        android:fontFamily="@font/gill_sans_mt"
        android:textColor="@color/cornflower_blue"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_to_usd"
        android:text="@string/usd" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_usd"
        android:paddingTop="6dp"
        android:textSize="15sp"
        android:fontFamily="@font/gill_sans_mt"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintLeft_toRightOf="@+id/btn_to_gel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/gel" />

</androidx.constraintlayout.widget.ConstraintLayout>